--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -7,3 +7,6 @@ jobs:
     steps:
       - name: Display some text
         run: echo "Some text"
+      - name: Command in Multiline
+        run: |
+          pip list
