--- a/.github/workflows/third_workflow.yml
+++ b/.github/workflows/third_workflow.yml
@@ -5,7 +5,8 @@ jobs:
   run-first-command:
     runs-on: ubuntu-latest
     steps:
-      - name: Display some text
-        run: |
-          pwd
-          ls -a
+      - name: List File And Copy Repo
+        run: ls -a
+      - uses: actions/checkout@v4
+      - name: List
+        run: ls -a
